--- a/app/src/main/res/layout/item_custom_incoming_preview_message.xml
+++ b/app/src/main/res/layout/item_custom_incoming_preview_message.xml
@@ -129,10 +129,11 @@
                     android:layout_height="match_parent"
                     android:autoLink="none"
                     android:ellipsize="middle"
-                    android:gravity="center_vertical"
+                    android:gravity="start|center_vertical"
                     android:maxLines="3"
                     android:paddingStart="@dimen/standard_padding"
                     android:paddingEnd="0dp"
+                    android:textAlignment="viewStart"
                     android:textColor="@color/high_emphasis_text"
                     android:textColorLink="@color/high_emphasis_text"
                     android:textIsSelectable="false"
@@ -152,6 +153,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="2dp"
             android:autoLink="none"
+            android:textAlignment="viewStart"
             android:textColor="@color/warm_grey_four"
             android:textColorLink="@color/warm_grey_four"
             android:textIsSelectable="true"
