--- a/app/src/main/res/layout/item_custom_outcoming_preview_message.xml
+++ b/app/src/main/res/layout/item_custom_outcoming_preview_message.xml
@@ -119,10 +119,11 @@
                     android:layout_height="match_parent"
                     android:autoLink="none"
                     android:ellipsize="middle"
-                    android:gravity="center_vertical"
+                    android:gravity="start|center_vertical"
                     android:maxLines="3"
                     android:paddingStart="@dimen/standard_padding"
                     android:paddingEnd="0dp"
+                    android:textAlignment="viewStart"
                     android:textColor="@color/high_emphasis_text"
                     android:textColorLink="@color/high_emphasis_text"
                     android:textIsSelectable="false"
