--- a/app/src/main/res/layout/item_message_quote.xml
+++ b/app/src/main/res/layout/item_message_quote.xml
@@ -45,6 +45,7 @@
         android:layout_marginEnd="8dp"
         android:layout_toEndOf="@id/quoteColoredView"
         android:ellipsize="end"
+        android:textAlignment="viewStart"
         android:textColor="@color/textColorMaxContrast"
         android:textIsSelectable="false"
         android:textSize="12sp"
@@ -83,6 +84,7 @@
             android:layout_below="@id/quotedMessageImage"
             android:layout_alignStart="@id/quotedMessageAuthor"
             android:lineSpacingMultiplier="1.2"
+            android:textAlignment="viewStart"
             android:textIsSelectable="false"
             android:textSize="14sp"
             app:layout_alignSelf="flex_start"
