--- a/app/src/main/res/layout/rv_item_contact.xml
+++ b/app/src/main/res/layout/rv_item_contact.xml
@@ -51,6 +51,7 @@
         android:layout_toEndOf="@id/simple_drawee_view"
         android:ellipsize="end"
         android:lines="1"
+        android:textAlignment="viewStart"
         android:textAppearance="@style/ListItem"
         tools:text="Jane Doe" />
 
