--- a/app/src/main/res/layout/rv_item_notification_sound.xml
+++ b/app/src/main/res/layout/rv_item_notification_sound.xml
@@ -41,6 +41,7 @@
         android:lines="1"
         android:paddingStart="24dp"
         android:paddingEnd="0dp"
+        android:textAlignment="viewStart"
         android:textAppearance="@style/ListItem"
         tools:text="Ringy Gone" />
 
