--- a/app/src/main/res/layout/geocoding_item.xml
+++ b/app/src/main/res/layout/geocoding_item.xml
@@ -33,8 +33,8 @@
         android:layout_width="@dimen/avatar_size"
         android:layout_height="@dimen/avatar_size"
         android:layout_gravity="top"
-        android:layout_marginTop="@dimen/standard_margin"
         android:layout_marginStart="@dimen/standard_half_margin"
+        android:layout_marginTop="@dimen/standard_margin"
         android:layout_marginEnd="@dimen/standard_double_padding"
         android:layout_marginBottom="@dimen/standard_margin"
         android:contentDescription="@null"
@@ -44,13 +44,14 @@
         android:id="@+id/name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="top"
+        android:layout_gravity="start|top"
+        android:paddingStart="@dimen/standard_half_padding"
+        android:paddingTop="12dp"
+        android:paddingEnd="@dimen/standard_padding"
+        android:paddingBottom="@dimen/standard_padding"
+        android:textAlignment="viewStart"
         android:textColor="@color/high_emphasis_text"
         android:textSize="@dimen/geocoding_result_text_size"
-        android:paddingTop="12dp"
-        android:paddingBottom="@dimen/standard_padding"
-        android:paddingStart="@dimen/standard_half_padding"
-        android:paddingEnd="@dimen/standard_padding"
         tools:text="S Sonnenallee, 50, Saalestraße, Rixdorf, Neukölln, Berlin, 12055, Deutschland" />
 
 </LinearLayout>
