--- a/app/src/main/res/layout/item_custom_outcoming_location_message.xml
+++ b/app/src/main/res/layout/item_custom_outcoming_location_message.xml
@@ -57,6 +57,7 @@
             android:layout_height="wrap_content"
             android:layout_alignWithParentIfMissing="true"
             android:lineSpacingMultiplier="1.2"
+            android:textAlignment="viewStart"
             android:textColorHighlight="@color/nc_grey"
             android:textIsSelectable="true"
             tools:text="Talk to you later!" />
