--- a/app/src/main/res/layout/item_custom_outcoming_text_message.xml
+++ b/app/src/main/res/layout/item_custom_outcoming_text_message.xml
@@ -52,6 +52,7 @@
             android:layout_height="wrap_content"
             android:layout_alignWithParentIfMissing="true"
             android:lineSpacingMultiplier="1.2"
+            android:textAlignment="viewStart"
             android:textColorHighlight="@color/nc_grey"
             android:textIsSelectable="false"
             tools:text="Talk to you later!" />
