--- a/app/src/main/res/layout/library_fast_scroller_layout.xml
+++ b/app/src/main/res/layout/library_fast_scroller_layout.xml
@@ -35,6 +35,7 @@
             android:alpha="0.5"
             android:contentDescription="@null"
             android:paddingStart="6dp"
+            android:paddingEnd="0dp"
             android:src="@drawable/fast_scroller_handle" />
 
         <TextView
@@ -45,9 +46,10 @@
             android:layout_marginEnd="0dp"
             android:layout_toStartOf="@+id/fast_scroller_handle"
             android:background="@drawable/fast_scroller_bubble"
-            android:gravity="center"
+            android:gravity="start|center_vertical"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
+            android:textAlignment="viewStart"
             android:textColor="?android:attr/textColorPrimaryInverse"
             android:textSize="38sp"
             android:visibility="gone"
