--- a/app/src/main/res/layout/rv_item_app.xml
+++ b/app/src/main/res/layout/rv_item_app.xml
@@ -49,6 +49,8 @@
         android:layout_toEndOf="@id/icon_image_view"
         android:focusable="false"
         android:focusableInTouchMode="false"
+        android:gravity="start|center_vertical"
+        android:textAlignment="viewStart"
         android:textColor="@color/fg_default"
         android:textSize="16sp"
         tools:text="Start a new conversation" />
