--- a/app/src/main/res/layout/rv_item_title_header.xml
+++ b/app/src/main/res/layout/rv_item_title_header.xml
@@ -35,6 +35,7 @@
         android:layout_marginTop="@dimen/standard_half_margin"
         android:layout_marginEnd="@dimen/standard_margin"
         android:layout_marginBottom="@dimen/standard_half_margin"
+        android:textAlignment="viewStart"
         android:textColor="@color/colorPrimary"
         android:textStyle="bold"
         tools:text="A" />
