properly tint menu icon
Signed-off-by: Andy Scherzinger <info@andy-scherzinger.de>

--- a/app/src/main/res/drawable/ic_share_action.xml
+++ b/app/src/main/res/drawable/ic_share_action.xml
@@ -18,6 +18,7 @@
     android:width="24dp"
     android:height="24dp"
     android:autoMirrored="true"
+    android:tint="@color/medium_emphasis_text"
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
