--- a/app/src/main/res/layout/controller_locked.xml
+++ b/app/src/main/res/layout/controller_locked.xml
@@ -40,7 +40,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:contentDescription="@string/nc_app_product_name"
-            android:src="@drawable/ic_logo" />
+            android:src="@drawable/logo" />
 
         <ImageView
             android:layout_width="32dp"
