--- a/app/src/main/res/layout/controller_server_selection.xml
+++ b/app/src/main/res/layout/controller_server_selection.xml
@@ -45,7 +45,7 @@
             android:layout_marginBottom="@dimen/standard_margin"
             android:contentDescription="@string/nc_app_product_name"
             android:scaleType="centerInside"
-            app:srcCompat="@drawable/ic_logo" />
+            app:srcCompat="@drawable/logo" />
 
         <LinearLayout
             android:layout_width="wrap_content"
