--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,8 +22,8 @@
   -->
 
 <resources>
-    <color name="colorPrimary">#0082C9</color>
-    <color name="colorPrimaryDark">#006AA3</color>
+    <color name="colorPrimary">#E0445C</color>
+    <color name="colorPrimaryDark">#E0445C</color>
     <color name="colorAccent">@color/colorPrimary</color>
     <color name="textColorOnPrimaryBackground">#ffffff</color> <!-- white/black depending on primary color -->
     <color name="nc_login_text_color">#B3FFFFFF</color>
