--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -82,6 +82,7 @@
                     android:ellipsize="end"
                     android:gravity="start|center_vertical"
                     android:lines="1"
+                    android:textAlignment="viewStart"
                     android:textColor="@color/fontSecondaryAppbar"
                     android:textSize="16sp"
                     app:layout_constraintBottom_toBottomOf="parent"
