--- a/app/src/main/res/layout/lobby_view.xml
+++ b/app/src/main/res/layout/lobby_view.xml
@@ -47,6 +47,7 @@
         android:text="@string/nc_lobby_waiting"
         android:textAlignment="center"
         android:textColor="@color/grey_600"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        android:autoLink="web" />
 
 </RelativeLayout>
