Replace 'mute calls' by 'call notifications'
The 'mute calls' setting was only stored locally on the device. The new
'call notifications' setting is stored on the Nextcloud server and
shared over all devices.

See:
  - https://github.com/nextcloud/spreed/pull/6338

Signed-off-by: Tim Krüger <t@timkrueger.me>

--- a/app/src/main/res/layout/notification_settings_item.xml
+++ b/app/src/main/res/layout/notification_settings_item.xml
@@ -54,13 +54,12 @@
             apc:mp_title="@string/nc_plain_old_messages" />
 
         <com.yarolegovich.mp.MaterialSwitchPreference
-            android:id="@+id/muteCalls"
+            android:id="@+id/callNotifications"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            apc:mp_default_value="false"
-            apc:mp_key="mute_calls"
-            apc:mp_title="@string/nc_mute_calls"
-            apc:mp_summary="@string/nc_mute_calls_desc"/>
+            apc:mp_default_value="true"
+            apc:mp_key="call_notifications"
+            apc:mp_title="@string/nc_call_notifications" />
 
     </com.yarolegovich.mp.MaterialPreferenceCategory>
 
