use standardized values
Signed-off-by: Andy Scherzinger <info@andy-scherzinger.de>

--- a/app/src/main/res/layout/activity_take_picture.xml
+++ b/app/src/main/res/layout/activity_take_picture.xml
@@ -46,8 +46,8 @@
     <com.google.android.material.button.MaterialButton
         android:id="@+id/toggle_crop"
         style="@style/Widget.AppTheme.Button.IconButton"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="@dimen/min_size_clickable_area"
+        android:layout_height="@dimen/min_size_clickable_area"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="0dp"
@@ -60,7 +60,7 @@
         android:insetRight="4dp"
         android:insetBottom="4dp"
         android:tint="@color/white"
-        app:backgroundTint="#99121212"
+        app:backgroundTint="@color/camera_bg_tint"
         app:cornerRadius="@dimen/button_corner_radius"
         app:elevation="0dp"
         app:icon="@drawable/ic_crop_16_9"
@@ -75,8 +75,8 @@
     <com.google.android.material.button.MaterialButton
         android:id="@+id/toggle_lowres"
         style="@style/Widget.AppTheme.Button.IconButton"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="@dimen/min_size_clickable_area"
+        android:layout_height="@dimen/min_size_clickable_area"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="12dp"
@@ -90,7 +90,7 @@
         android:insetBottom="4dp"
         android:padding="0dp"
         android:tint="@android:color/white"
-        app:backgroundTint="#99121212"
+        app:backgroundTint="@color/camera_bg_tint"
         app:cornerRadius="@dimen/button_corner_radius"
         app:elevation="0dp"
         app:icon="@drawable/ic_low_quality"
@@ -105,8 +105,8 @@
     <com.google.android.material.button.MaterialButton
         android:id="@+id/toggle_torch"
         style="@style/Widget.AppTheme.Button.IconButton"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="@dimen/min_size_clickable_area"
+        android:layout_height="@dimen/min_size_clickable_area"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="0dp"
@@ -119,7 +119,7 @@
         android:insetRight="4dp"
         android:insetBottom="4dp"
         android:tint="@color/white"
-        app:backgroundTint="#99121212"
+        app:backgroundTint="@color/camera_bg_tint"
         app:cornerRadius="@dimen/button_corner_radius"
         app:elevation="0dp"
         app:icon="@drawable/ic_baseline_flash_on_24"
@@ -134,8 +134,8 @@
     <com.google.android.material.button.MaterialButton
         android:id="@+id/switchCamera"
         style="@style/Widget.AppTheme.Button.IconButton"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="@dimen/min_size_clickable_area"
+        android:layout_height="@dimen/min_size_clickable_area"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="12dp"
@@ -149,7 +149,7 @@
         android:insetBottom="4dp"
         android:padding="0dp"
         android:tint="@android:color/white"
-        app:backgroundTint="#99121212"
+        app:backgroundTint="@color/camera_bg_tint"
         app:cornerRadius="@dimen/button_corner_radius"
         app:elevation="0dp"
         app:icon="@drawable/ic_baseline_flip_camera_android_24"
@@ -164,8 +164,8 @@
     <com.google.android.material.button.MaterialButton
         android:id="@+id/retake"
         style="@style/Widget.AppTheme.Button.IconButton"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="@dimen/min_size_clickable_area"
+        android:layout_height="@dimen/min_size_clickable_area"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_marginBottom="12dp"
@@ -177,7 +177,7 @@
         android:padding="0dp"
         android:tint="@android:color/white"
         android:visibility="gone"
-        app:backgroundTint="#99121212"
+        app:backgroundTint="@color/camera_bg_tint"
         app:cornerRadius="@dimen/button_corner_radius"
         app:elevation="0dp"
         app:icon="@drawable/ic_refresh"
